--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <base target="_top">
   <meta charset="UTF-8">
@@ -25,17 +25,21 @@
     #loading-overlay { position: fixed; inset: 0; background: var(--bg-primary); z-index: 9999; display: none; align-items: center; justify-content: center; flex-direction: column; }
     .spinner { width: 40px; height: 40px; border: 4px solid var(--border-color); border-top-color: #3b82f6; border-radius: 50%; animation: spin 1s linear infinite; }
     @keyframes spin { to { transform: rotate(360deg); } }
+    .header-btn { padding: 0.75rem; border-radius: 1rem; box-shadow: 0 1px 2px rgba(0,0,0,0.05); background: var(--bg-secondary); border: 1px solid var(--border-color); }
   </style>
 </head>
 <body>
   <div id="loading-overlay">
     <div id="loader-spinner" class="spinner mb-4"></div>
     <div id="loader-success" class="hidden mb-4"><svg class="w-12 h-12 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M5 13l4 4L19 7" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/></svg></div>
-    <p id="loading-text" class="font-black text-blue-600 uppercase tracking-widest text-xs">Cargando...</p>
+    <p id="loading-text" class="font-black text-blue-600 uppercase tracking-widest text-xs" data-i18n="loading">Loading...</p>
   </div>
 
-  <header class="flex justify-between items-center p-5 sticky top-0 bg-[var(--bg-primary)] z-50">
-    <button onclick="toggleTheme()" class="p-3 rounded-2xl shadow-sm bg-[var(--bg-secondary)] border border-[var(--border-color)]">
+  <header class="flex justify-end items-center gap-2 p-5 sticky top-0 bg-[var(--bg-primary)] z-50">
+    <button onclick="toggleLang()" class="header-btn">
+      <span id="lang-icon" class="text-sm font-bold">EN</span>
+    </button>
+    <button onclick="toggleTheme()" class="header-btn">
       <span id="theme-icon"></span>
     </button>
   </header>
@@ -44,28 +48,28 @@
     <form id="expenseForm">
       <input type="number" id="amount" step="0.01" placeholder="0.00" inputmode="decimal" required>
       <div id="movementTypeGroup" class="flex p-1 rounded-2xl mb-8 bg-[var(--bg-switch)]">
-        <button type="button" class="flex-1 py-3 rounded-xl font-bold transition-all bg-blue-600 text-white shadow-md" data-value="Compra">Gasto</button>
-        <button type="button" class="flex-1 py-3 rounded-xl font-bold transition-all text-slate-500" data-value="Ingreso">Ingreso</button>
+        <button type="button" class="flex-1 py-3 rounded-xl font-bold transition-all bg-blue-600 text-white shadow-md" data-value="Compra" data-i18n="expense">Expense</button>
+        <button type="button" class="flex-1 py-3 rounded-xl font-bold transition-all text-slate-500" data-value="Ingreso" data-i18n="income">Income</button>
       </div>
       <input type="hidden" id="movementType" value="Compra">
       <div class="space-y-6">
         <div>
-          <label class="block text-[10px] font-black text-slate-400 uppercase mb-2">Descripción</label>
-          <input type="text" id="description" class="input-base" placeholder="¿En qué?" required>
+          <label class="block text-[10px] font-black text-slate-400 uppercase mb-2" data-i18n="description">Description</label>
+          <input type="text" id="description" class="input-base" data-i18n-placeholder="descriptionPlaceholder" placeholder="What for?" required>
           <div id="suggestions-container" class="scroll-container mt-2"></div>
         </div>
         <div>
-          <label class="block text-[10px] font-black text-slate-400 uppercase mb-2">Categoría</label>
+          <label class="block text-[10px] font-black text-slate-400 uppercase mb-2" data-i18n="category">Category</label>
           <div id="categoryGroup" class="scroll-container"></div>
           <input type="hidden" id="expenseType" required>
         </div>
         <div>
-          <label class="block text-[10px] font-black text-slate-400 uppercase mb-2">Pago</label>
+          <label class="block text-[10px] font-black text-slate-400 uppercase mb-2" data-i18n="payment">Payment</label>
           <div id="paymentMethodGroup" class="scroll-container"></div>
           <input type="hidden" id="paymentMethod" required>
         </div>
       </div>
-      <button type="submit" class="w-full py-4 mt-8 bg-blue-600 text-white font-bold rounded-2xl shadow-xl active:scale-95 transition-all">Registrar</button>
+      <button type="submit" class="w-full py-4 mt-8 bg-blue-600 text-white font-bold rounded-2xl shadow-xl active:scale-95 transition-all" data-i18n="register">Register</button>
     </form>
   </section>
 
@@ -90,11 +94,11 @@
     </div>
     <div class="grid grid-cols-2 gap-4 mb-6">
       <div class="p-4 bg-green-500/10 rounded-2xl border-l-4 border-green-500 text-green-600">
-        <span class="text-[10px] font-black uppercase">Ingresos</span>
+        <span class="text-[10px] font-black uppercase" data-i18n="incomeLabel">Income</span>
         <p id="stat-income" class="text-xl font-black">$0</p>
       </div>
       <div class="p-4 bg-rose-500/10 rounded-2xl border-l-4 border-rose-500 text-rose-600">
-        <span class="text-[10px] font-black uppercase">Gastos</span>
+        <span class="text-[10px] font-black uppercase" data-i18n="expenseLabel">Expenses</span>
         <p id="stat-expense" class="text-xl font-black">$0</p>
       </div>
     </div>
@@ -104,14 +108,15 @@
   </section>
 
   <nav class="nav-floating">
-    <button onclick="switchView('form')" id="nav-btn-form" class="flex flex-col items-center p-3 text-blue-600"><span class="text-[10px] font-bold">NUEVO</span></button>
-    <button onclick="switchView('list')" id="nav-btn-list" class="flex flex-col items-center p-3 text-slate-400"><span class="text-[10px] font-bold">HISTORIAL</span></button>
-    <button onclick="switchView('stats')" id="nav-btn-stats" class="flex flex-col items-center p-3 text-slate-400"><span class="text-[10px] font-bold">STATS</span></button>
+    <button onclick="switchView('form')" id="nav-btn-form" class="flex flex-col items-center p-3 text-blue-600"><span class="text-[10px] font-bold" data-i18n="navNew">NEW</span></button>
+    <button onclick="switchView('list')" id="nav-btn-list" class="flex flex-col items-center p-3 text-slate-400"><span class="text-[10px] font-bold" data-i18n="navHistory">HISTORY</span></button>
+    <button onclick="switchView('stats')" id="nav-btn-stats" class="flex flex-col items-center p-3 text-slate-400"><span class="text-[10px] font-bold" data-i18n="navStats">STATS</span></button>
   </nav>
 
 <script>
   const $ = id => document.getElementById(id);
   let chart = null;
+  let currentLang = 'en';
 
   const ICONS = {
     sun: `<svg class="w-6 h-6 text-yellow-500" fill="currentColor" viewBox="0 0 20 20"><path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"/></svg>`,
@@ -119,6 +124,62 @@
   };
 
   const COLORS = ['#3b82f6', '#10b981', '#f59e0b', '#ef4444', '#8b5cf6'];
+
+  const I18N = {
+    en: {
+      loading: 'Loading...',
+      saving: 'Saving...',
+      expense: 'Expense',
+      income: 'Income',
+      description: 'Description',
+      descriptionPlaceholder: 'What for?',
+      category: 'Category',
+      payment: 'Payment',
+      register: 'Register',
+      navNew: 'NEW',
+      navHistory: 'HISTORY',
+      navStats: 'STATS',
+      incomeLabel: 'Income',
+      expenseLabel: 'Expenses'
+    },
+    es: {
+      loading: 'Cargando...',
+      saving: 'Guardando...',
+      expense: 'Gasto',
+      income: 'Ingreso',
+      description: 'Descripción',
+      descriptionPlaceholder: '¿En qué?',
+      category: 'Categoría',
+      payment: 'Pago',
+      register: 'Registrar',
+      navNew: 'NUEVO',
+      navHistory: 'HISTORIAL',
+      navStats: 'STATS',
+      incomeLabel: 'Ingresos',
+      expenseLabel: 'Gastos'
+    }
+  };
+
+  function t(key) {
+    return I18N[currentLang][key] || key;
+  }
+
+  function applyLanguage() {
+    document.querySelectorAll('[data-i18n]').forEach(el => {
+      el.textContent = t(el.dataset.i18n);
+    });
+    document.querySelectorAll('[data-i18n-placeholder]').forEach(el => {
+      el.placeholder = t(el.dataset.i18nPlaceholder);
+    });
+    $('lang-icon').textContent = currentLang.toUpperCase();
+    document.documentElement.lang = currentLang;
+  }
+
+  function toggleLang() {
+    currentLang = currentLang === 'en' ? 'es' : 'en';
+    localStorage.setItem('lang', currentLang);
+    applyLanguage();
+  }
 
   function toggleTheme() {
     const isDark = document.documentElement.classList.toggle('dark-mode');
@@ -201,13 +262,13 @@
     document.querySelectorAll('.scroll-button').forEach(b => b.classList.remove('selected'));
     $('loader-spinner').classList.remove('hidden');
     $('loader-success').classList.add('hidden');
-    $('loading-text').innerText = 'Cargando...';
+    $('loading-text').innerText = t('loading');
   }
 
   $('expenseForm').onsubmit = e => {
     e.preventDefault();
     $('loading-overlay').style.display = 'flex';
-    $('loading-text').innerText = 'Guardando...';
+    $('loading-text').innerText = t('saving');
 
     google.script.run.withSuccessHandler(() => {
       $('loader-spinner').classList.add('hidden');
@@ -234,6 +295,9 @@
   };
 
   window.onload = () => {
+    currentLang = localStorage.getItem('lang') || 'en';
+    applyLanguage();
+
     const isDark = localStorage.getItem('theme') === 'dark';
     if (isDark) document.documentElement.classList.add('dark-mode');
     $('theme-icon').innerHTML = isDark ? ICONS.sun : ICONS.moon;
